--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </head>
     <body>
        <div class="background">
-    <p>Го́мель (белор. Гомель) — город в Белоруссии, административный центр Гомельской области, а также Гомельского района, в состав которого город не входит. Второй по численности населения (503 984 человек на 1 января 2022 года[2]) город в стране. Расположен на юго-востоке республики на реке Сож в 302 км на юго-восток от Минска, в 534 км на восток от Бреста, в 171 км на юг от Могилёва, в 237 км на запад от Брянска, в 111 км к северу от Чернигова, в 567 км на юго-запад от Москвы.
-    </p>
+       <p class="text"> Го́мель (белор. Гомель) — город в Белоруссии, административный центр Гомельской области, а также Гомельского района, в состав которого город не входит. Второй по численности населения (503 984 человек на 1 января 2022 года) город в стране. Расположен на юго-востоке республики на реке Сож в 302 км на юго-восток от Минска, в 534 км на восток от Бреста, в 171 км на юг от Могилёва, в 237 км на запад от Брянска, в 111 км к северу от Чернигова, в 567 км на юго-запад от Москвы.
+    Го́мель (белор. Гомель) — город в Белоруссии, административный центр Гомельской области, а также Гомельского района, в состав которого город не входит. Второй по численности населения (503 984 человек на 1 января 2022 года) город в стране. Расположен на юго-востоке республики на реке Сож в 302 км на юго-восток от Минска, в 534 км на восток от Бреста, в 171 км на юг от Могилёва, в 237 км на запад от Брянска, в 111 км к северу от Чернигова, в 567 км на юго-запад от Москвы.</p> 
         </div>
     </body>
     </html>
